--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "laravel-mix": "^1.0",
+        "cross-env": "^5.0.1",
+        "laravel-mix": "^1.0"
     }
 }
