--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+APP_NAME="Share-A-Talk"
+APP_DESCRIPTION="A social network for introverts. Let your favourite talks do the talking!"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
